--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,8 @@
-<!-- app/templates/index.html
-html -->
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
 {% block content %}
-<h2>Welcome, {{ username }}!</h2>
-<p>Use the navigation to manage your Coinbase API keys or view transactions.</p>
+    <h1>Welcome, {{ username }}!</h1>
+    <p>This is the home page. You are logged in.</p>
 {% endblock %}
