--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,6 +14,10 @@
             <input type="password" name="password" required>
         </div>
         <div>
+            <label>Email:</label>
+            <input type="email" name="email" placeholder="Enter email address">
+        </div>
+        <div>
             <label>
                 <input type="checkbox" name="enable_2fa"> Enable Two-Factor Authentication
             </label>
