--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,8 @@
             {% if session.username %}
                 <a href="{{ url_for('main.home') }}">Home</a>
                 <a href="{{ url_for('coinbase.transactions') }}">Transactions</a>
+                <a href="{{ url_for('coinbase.import_transactions') }}">Import Transactions</a>
+                <a href="{{ url_for('settings.settings') }}">Settings</a>
                 <a href="{{ url_for('auth.logout') }}">Logout</a>
             {% else %}
                 <a href="{{ url_for('auth.login') }}">Login</a>
