--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,18 +4,18 @@
 
 {% block content %}
     <h1>Login</h1>
-    <form method="POST">
-        <div>
-            <label>Username:</label>
-            <input type="text" name="username" required>
-        </div>
-        <div>
-            <label>Password:</label>
-            <input type="password" name="password" required>
-        </div>
-        <div>
+    <div class="card">
+        <form method="POST" action="{{ url_for('auth.login') }}">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
             <button type="submit">Login</button>
-        </div>
-    </form>
-    <p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
+        </form>
+        <p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register</a></p>
+    </div>
 {% endblock %}
