--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
         {% if 'username' in session %}
             <div class="sidebar">
                 <h3>Menu</h3>
-                <a href="{{ url_for('main.home') }}">Home</a>
+                <a href="{{ url_for('main.index') }}">Home</a>
                 <a href="{{ url_for('coinbase.transactions') }}">Transactions</a>
                 <a href="{{ url_for('coinbase.import_transactions') }}">Import Transactions</a>
                 <a href="{{ url_for('settings.settings') }}">Settings</a>
